clang/test/BSC/Negative/Ownership/Borrow/reborrow_restriction/reborrow_restriction.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void read_by_value(int);
void read_by_borrow(const int *_Borrow);

void non_lexical_lifetime(int x) {
    int *_Borrow ref = &_Mut x;
    const int *_Borrow cref = ref; // expected-note {{`*ref` is borrowed here}}
    ++*ref; // expected-error {{cannot assign to `*ref` because it is borrowed}}
    read_by_value(*cref); 
}

void non_lexical_lifetime_limitation(int x) {
    int *_Borrow ref = &_Mut x; // expected-note {{`x` is borrowed here}}
    // explicitly define an immutable reference
    const int *_Borrow cref = ref;
    // ref does not expire here, even without any modification operations below
    read_by_value(x); // expected-error {{cannot use `x` because it was mutably borrowed}}
    read_by_value(*cref);
}

// re-_Borrow in function arguments
void accept_immutable(const int *_Borrow); // expected-note 2 {{passing argument to parameter here}}
void accept_mutable(int *_Borrow); // expected-note 3 {{passing argument to parameter here}}

// re-_Borrow when return value
int *ret_raw();
const int *_Borrow ret_immutable(const int *_Borrow);
int *_Owned ret_own();



void raw2immutable(int *ptr) {
    const int *_Borrow cref = ptr; // expected-error {{incompatible _Borrow types, cannot cast 'int *' to 'const int *_Borrow'}}
    accept_immutable(ptr); // expected-error {{incompatible _Borrow types, cannot cast 'int *' to 'const int *_Borrow'}}
    const int *_Borrow cref2 = ret_raw(); // expected-error {{incompatible _Borrow types, cannot cast 'int *' to 'const int *_Borrow'}}
}

int *_Owned own2immutable(int *_Owned ptr) {
    const int *_Borrow cref = ptr; // expected-error {{incompatible _Borrow types, cannot cast 'int *_Owned' to 'const int *_Borrow'}}
    accept_immutable(ptr); // expected-error {{incompatible _Borrow types, cannot cast 'int *_Owned' to 'const int *_Borrow'}}
    const int *_Borrow cref2 = ret_own(); // expected-error {{incompatible _Borrow types, cannot cast 'int *_Owned' to 'const int *_Borrow'}}
    return ptr;
}

void immutable2mutable(const int *_Borrow cref) {
    int *_Borrow ref = cref; // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow'}}
    accept_mutable(cref); // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow'}}
    int dummy = 0;
    int *_Borrow ref2 = ret_immutable(&_Const dummy); // expected-error {{incompatible _Borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow'}}
}

void raw2mutable(int *ptr) {
    int *_Borrow ref = ptr; // expected-error {{incompatible _Borrow types, cannot cast 'int *' to 'int *_Borrow'}}
    accept_mutable(ptr); // expected-error {{incompatible _Borrow types, cannot cast 'int *' to 'int *_Borrow'}}
    int *_Borrow ref2 = ret_raw(); // expected-error {{incompatible _Borrow types, cannot cast 'int *' to 'int *_Borrow'}}
}

int *_Owned own2mutable(int *_Owned ptr) {
    int *_Borrow ref = ptr; // expected-error {{incompatible _Borrow types, cannot cast 'int *_Owned' to 'int *_Borrow'}}
    accept_mutable(ptr); // expected-error {{incompatible _Borrow types, cannot cast 'int *_Owned' to 'int *_Borrow'}}
    int *_Borrow ref2 = ret_own(); // expected-error {{incompatible _Borrow types, cannot cast 'int *_Owned' to 'int *_Borrow'}}
    return ptr;
}

